--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -8,10 +8,33 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2019, macos-10.15]
+        os: [ubuntu-latest]
 
     steps:
+
+      - name: Clone lgpio
+        uses: actions/checkout@v2
+        with:
+          repository: 'joan2937/lg'
+          ref: '9ebaf583b8647d5531a6d2d797cb27d4aefb6d1a'
+
+      - name: Build and Install lgpio
+        run: |
+          make
+          sudo make install
+          sudo sh -c "echo '/usr/local/lib' >> /etc/ld.so.conf"
+          sudo ldconfig
+          sudo chown -R $USER:$USER /home/runner/work
+
       - uses: actions/checkout@v2
+
+      - name: Build and install libhx711
+        run: |
+          make
+          sudo make install
+          sudo sh -c "echo '/usr/local/lib' >> /etc/ld.so.conf"
+          sudo ldconfig
+          sudo chown -R $USER:$USER /home/runner/work
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.1.1
