--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,7 @@ requires = [
     "pybind11>=2.7.0",
 ]
 
+[tool.cibuildwheel]
+before-all = "./install-deps.sh"
+
 build-backend = "setuptools.build_meta"
