move deps to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,18 @@ requires = [
 ]
 
 [tool.cibuildwheel]
-before-all = "sudo ./install-deps.sh"
+before-all = [
+
+    "git clone https://github.com/joan2937/lg@v0.1",
+    "cd lg",
+    "make && sudo make install",
+
+    "sudo ldconfig",
+    "sudo chown -R $USER:$USER /home/runner/work",
+
+    "git clone https://github.com/endail/hx711",
+    "cd hx711",
+    "make && sudo make install"
+
+]
 
