--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires = [
 [tool.cibuildwheel]
 before-all = [
 
-    "git clone https://github.com/joan2937/lg@v0.1",
+    "git clone --depth 1 --branch v0.1 https://github.com/joan2937/lg",
     "cd lg",
     "make && sudo make install",
 
