--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ requires = [
 [tool.cibuildwheel]
 before-all = [
 
+    "sudo apt-get install gpiod libgpiod-dev libgpiod-doc",
+
     "git clone --depth 1 --branch v0.1 https://github.com/joan2937/lg",
     "cd lg",
     "make && sudo make install",
