--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ before-build = [
 ]
 
 [tool.cibuildwheel.linux]
-#manylinux-x86_64_image = "manylinux_2_24"
-manylinux-i686-image = "manylinux_2_24"
-manylinux-pypy_x86_64-image = "manylinux_2_24"
-manylinux-pypy_i686-image = "manylinux_2_24"
+manylinux-x86_64_image = "quay.io/pypa/manylinux_2_24:latest"
+manylinux-i686-image = "quay.io/pypa/manylinux_2_24:latest"
+manylinux-pypy_x86_64-image = "quay.io/pypa/manylinux_2_24:latest"
+manylinux-pypy_i686-image = "quay.io/pypa/manylinux_2_24:latest"
