--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,4 +40,4 @@ before-build = [
 
 [tool.cibuildwheel.linux]
 archs = ["i686"]
-manylinux-i686-image = "manylinux_2_24"
+manylinux-i686-image = "lukechilds/dockerpi"
