--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,4 @@ before-build = [
 archs = ["i686"]
 manylinux-i686-image = "manylinux_2_24"
 #manylinux-i686-image = "lukechilds/dockerpi"
+skip = "pp*"
