--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ build-backend = "setuptools.build_meta"
 build-verbosity = 3
 before-all = [
     "apt-get update -y",
-    "apt-get upgrade -y"
+    "apt-get upgrade -y",
     "apt-get dist-upgrade -y",
     "apt full-upgrade -y"
     "chmod +x install-deps.sh && ./install-deps.sh"
