--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ before-all = [
     "apt-get update -y",
     "apt-get upgrade -y",
     "apt-get dist-upgrade -y",
-    "apt full-upgrade -y"
+    "apt full-upgrade -y",
     "chmod +x install-deps.sh && ./install-deps.sh"
 ]
 
