--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ before-build = [
 archs = [
     "auto"
 ]
+manylinux-x86_64-image = "manylinux_2_24"
 manylinux-i686-image = "manylinux_2_24"
 #manylinux-i686-image = "lukechilds/dockerpi"
 skip = "pp*"
