--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,6 @@ archs = [
 ]
 #manylinux-x86_64-image = "manylinux_2_24"
 #manylinux-i686-image = "manylinux_2_24"
-manylinux-i686-image = "dockcross/linux-armv6"
+manylinux-i686-image = "dockcross/linux-x86"
 #manylinux-i686-image = "lukechilds/dockerpi"
 skip = "pp*"
