--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,10 +46,8 @@ before-build = [
 
 [tool.cibuildwheel.linux]
 archs = [
-    "i686"
+    "auto"
 ]
-#manylinux-x86_64-image = "manylinux_2_24"
-#manylinux-i686-image = "manylinux_2_24"
-#manylinux-i686-image = "dockcross/linux-x86"
-manylinux-i686-image = "lukechilds/dockerpi"
+manylinux-x86_64-image = "manylinux_2_24"
+manylinux-i686-image = "manylinux_2_24"
 skip = "pp*"
