--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install deps
-        run: sudo ./install-deps
+        run: sudo ./install-deps.sh
 
       - name: Build
         run: make
