--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -9,6 +9,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: pguyot/arm-runner-action@v1
       with:
+        image_additional_mb: 10000
         commands: |
             sudo apt-get update -y
             sudo apt-get install python3-gpiozero -y
