--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -16,6 +16,9 @@ jobs:
         commands: |
             sudo apt-get update -y
             sudo apt-get full-upgrade -y
+            sudo apt-get install git-all -y
+            sudo apt install swig python-dev python3-dev -y
+            sudo apt install python-setuptools python3-setuptools -y
             sudo ./install-deps.sh
             make
         base_image: ${{ matrix.base_image }}
