--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,23 +1,38 @@
-name: Build
-
-on: [push, pull_request]
+name: Build wheels
+on: ["push"]
 
 jobs:
-  build_wheels:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+  build:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        base_image: ["raspios_lite:2021-05-07"]
+        cpu: [arm1176, cortex-a8]
 
     steps:
 
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.1.1
+    - uses: pguyot/arm-runner-action@v1
+      with:
+        commands: |
+            
+            sudo apt-get update -y
+            sudo apt-get full-upgrade -y
+            sudo apt-get install git-all -y
+            sudo apt install swig python-dev python3-dev -y
+            sudo apt install python-setuptools python3-setuptools -y
+            sudo ./install-deps.sh
 
-      - name: Upload wheels
-        uses: actions/upload-artifact@v2
-        with:
-          path: wheelhouse/*.whl
+            python3 -m pip install cibuildwheel==2.1.1
+            python3 -m cibuildwheel --output-dir wheelhouse
+
+        base_image: ${{ matrix.base_image }}
+        image_additional_mb: 10000
+        cpu: ${{ matrix.cpu }}
+        optimize_image: false
+
+    - name: Upload wheels
+      uses: actions/upload-artifact@v2
+      with:
+        path: wheelhouse/*.whl
