--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -24,7 +24,7 @@ jobs:
             sudo apt install python-setuptools python3-setuptools -y
             sudo ./install-deps.sh
 
-            sudo apt-get install python3-pip
+            sudo apt-get install python3-pip -y
             sudo python3 -m pip install cibuildwheel==2.1.1
             sudo python3 -m cibuildwheel --output-dir wheelhouse
 
