--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -25,7 +25,7 @@ jobs:
             sudo apt install python-setuptools python3-setuptools -y
 
             sudo ./install-deps.sh
-
+            sudo apt-get install python3-pip -y
             python3 -m pip install build --user
             python3 -m build --sdist --wheel --outdir dist/ .
 
