--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -26,6 +26,7 @@ jobs:
 
             sudo ./install-deps.sh
             sudo apt-get install python3-pip -y
+            sudo apt-get install python3-venv -y
             python3 -m pip install build --user
             python3 -m build --sdist --wheel --outdir dist/ .
 
