--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -20,7 +20,7 @@ jobs:
 
             sudo apt-get update -y
             #sudo apt-get full-upgrade -y
-            sudo apt-get install linux-headers-generic -y
+            sudo apt-get install linux-headers-$(uname -r) -y
             sudo apt-get install swig python-dev python3-dev -y
             sudo apt-get install git-all python-setuptools python3-setuptools python3-pip python3-venv -y
 
