--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -19,8 +19,9 @@ jobs:
         commands: |
 
             sudo apt-get update -y
-            apt-cache search linux-headers
-            sudo apt-get install raspberrypi-kernel-headers
+            #apt-cache search linux-headers
+            sudo apt-get install libgpiod-dev -y
+            #sudo apt-get install raspberrypi-kernel-headers
             #sudo apt-get full-upgrade -y
             #sudo apt-get install linux-headers-$(uname -r) -y
             sudo apt-get install swig python-dev python3-dev -y
