--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -20,7 +20,7 @@ jobs:
 
             apt-get update -y
             apt-get full-upgrade -y
-            apt-get install python3-dev git-all python-setuptools python3-setuptools python3-pip python3-venv -y
+            apt-get install python3-dev git-all python3-setuptools python3-pip python3-venv -y
             ./install-deps.sh
             apt-get autoremove -y
 
