--- a/.github/workflows/buildcheck.yml
+++ b/.github/workflows/buildcheck.yml
@@ -29,7 +29,7 @@ jobs:
         copy_artifact_dest: .
 
     - name: Publish distribution 📦 to PyPI
-      if: ${{ success() }}
+      if: ${{ success() }} && startsWith(github.ref, 'refs/tags') }}
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
