--- a/.github/workflows/build_and_upload.yml
+++ b/.github/workflows/build_and_upload.yml
@@ -10,8 +10,13 @@ on:
 
 jobs:
 
-  build:
+  bumpversion:
+    name: auto increment version
+    runs-on: ubuntu-latest
+    steps:
+      - run: bump2version --current-version minor setup.py
 
+  build:
     name: Build on ${{ matrix.cpu }}
     runs-on: ubuntu-latest
     strategy:
@@ -36,7 +41,7 @@ jobs:
         copy_artifact_dest: .
 
     - name: Publish distribution 📦 to PyPI
-      if: ${{ success() }} && startsWith(github.ref, 'refs/tags') }}
+      if: ${{ success() }} }}
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
