--- a/.github/workflows/build_and_upload.yml
+++ b/.github/workflows/build_and_upload.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - run: |
           pip3 install --upgrade bump2version
-          bump2version minor setup.py
+          bump2version --config-file .bumpversion.cfg minor
 
   build:
 
