--- a/.github/workflows/build_and_upload.yml
+++ b/.github/workflows/build_and_upload.yml
@@ -20,7 +20,7 @@ jobs:
           pip3 install --upgrade bump2version
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          bump2version --config-file .bumpversion.cfg minor
+          bump2version --config-file .bumpversion.cfg minor setup.py
 
   build:
 
