--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,7 @@
 [bumpversion]
 current_version = 1.4.0
-commit = True
 tag = True
+commit = True
+commit_args = '--author="github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"'
 
 [bumpversion:file:setup.py]
