--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,6 +2,6 @@
 current_version = 1.4.0
 tag = True
 commit = True
-commit_args = '--author="github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"'
+commit_args = --author="github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
 
 [bumpversion:file:setup.py]
